fix : Aws cards spacing

--- a/client/src/components/CourseCard/course-card.css
+++ b/client/src/components/CourseCard/course-card.css
@@ -15,7 +15,7 @@ img {
 
 .card-outlin-border {
   border: solid 1px #2b292b;
-  /* width: 100%; */
+  width: 100%;
 }
 
 .card-outlin-border-skeleton {
